--- a/lvn_tutorial_backend/lib/lvn_tutorial_web/live/cat_live.ios.heex
+++ b/lvn_tutorial_backend/lib/lvn_tutorial_web/live/cat_live.ios.heex
@@ -1,3 +1,4 @@
 <vstack navigation-title={@name}>
   <asyncimage src={"/images/cats/#{@name}.jpg"} frame='{"width": 300, "height": 300}' />
+  <cat-rating score={@score} />
 </vstack>
